livecd-rootfs (2.525.17) UNRELEASED; urgency=medium

  * Add a buildd subproject.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Feb 2019 14:20:04 +0000

livecd-rootfs (2.525.16) bionic; urgency=medium

  * lubuntu: Select lubuntu-gtk-core task as well, so we get the HWE filter
    applied to the explicit dependencies it has on Xorg-recommended packages.
  * lubuntu: Manually install some packages that fall out due to the above.

 -- Adam Conrad <adconrad@ubuntu.com>  Mon, 04 Feb 2019 12:48:51 -0700

livecd-rootfs (2.525.15) bionic; urgency=medium

  * Forward-port HWE support from xenial, make it more generic, and enable
    it for the current LTS flavours.

 -- Adam Conrad <adconrad@ubuntu.com>  Fri, 01 Feb 2019 12:41:39 -0700

livecd-rootfs (2.525.14) bionic; urgency=medium

  * More changes for raspi3 build support (LP: #1805668):
    - Fix 100-purge-grub-legacy-ec2-arm.chroot to not gate on ARCH as that's
      not defined in .chroot hooks.
    - Use the new linux-firmware-raspi2 for boot binary blobs as
      raspi3-firmware includes upgrade hooks that conflict with our image
      configuration.

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Fri, 18 Jan 2019 16:56:58 +0100

livecd-rootfs (2.525.13) bionic; urgency=medium

  [ Balint Reczey ]
  * Update Vcs-* fields in debian/control to point to git.

  [ Łukasz 'sil2100' Zemczak ]
  * Another batch of cherry-picks for raspi3 support (LP: #1805668)
    - Add wpasupplicant to the additional packages installed for the raspi2 and
      raspi3 targets.
    - Default to IMAGEFORMAT=ubuntu-image for raspi3 ubuntu-cpc builds.
    - Link the resulting raspi3 image to a filename that cdimage expects from a
      preinstalled image build.
  * Add the 100-purge-grub-legacy-ec2-arm.chroot hook to remove
    grub-legacy-ec2 from any ARM based ubuntu-cpc images we create. The package
    is no longer in the server seed of newer series anyway.
